syntax = "proto3";

message CreateOrder
{
   enum OrderWay
   {
      buy  = 0;
      sell = 1;
   }

    OrderWay way                   = 1;
    double   quantity              = 2;
    double   price                 = 3;
    uint64   instrument_identifier = 4;
}
